compiler-plugin/testData/diagnostics/newContributesInjectorUseCase.kt
// ENABLE_CONTRIBUTES_INJECTOR_BASELINE

<!DEPRECATED_CONTRIBUTES_INJECTOR!>@ContributesInjector<!>
class FooActivity : CommonActivity<Unit>()
